# ddss-safely-report

./: .coverage  .dockerignore  .env.dev  .env.example  .env.test  .flake8  .flaskenv.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  app.py  docker-entrypoint.sh  form_generator.py  garbling.py  index.html  pyproject.toml  read_xlsform.py  requirements.txt  settings.py  survey_processor.py  survey_processor_base.py  survey_session.py  utils.py
.github/workflows/: docker-image.yml  docs.yml  python-app.yml
concepts/garbling/: index.html
contributing/process/: index.html
contributing/setup/: index.html
contributing/tips/: index.html
docs/: mkdocs.yml
docs/mkdocs/: index.md  quickstart.md
docs/mkdocs/concepts/: garbling.md
docs/mkdocs/contributing/: codebase.md  process.md  setup.md
docs/mkdocs/guides/: analyze-results.md  create-survey-files.md  create-survey.md  deploy-app.md  get-help.md
docs/mkdocs/guides/contribute/: setup.md
guides/analyze-results/: index.html
guides/create-survey/: index.html
guides/deploy-app/: index.html
guides/get-help/: index.html
migrations/versions/: .gitignore  843442ae3dbc_initial_migration.py
quickstart/: index.html
safely_report/: __init__.py  models.py  scheduler.py  settings.py  utils.py
safely_report/admin/: __init__.py  utils.py  views.py
safely_report/auth/: __init__.py  utils.py  views.py
safely_report/enumerator/: views.py
safely_report/static/: styles.css
safely_report/survey/: form_generator.py  garbling.py  read_xlsform.py  survey_processor.py  survey_processor_base.py  survey_session.py  views.py  xlsform_functions.py  xlsform_reader.py
safely_report/survey/templates/survey/: run_survey.html
safely_report/templates/: base.html
safely_report/templates/admin/: custom_base.html  custom_index.html  index.html
safely_report/templates/admin/enumerators/: list.html
safely_report/templates/admin/model/: custom_list.html
safely_report/templates/admin/respondents/: assign.html  list.html
safely_report/templates/auth/: authenticate.html  index.html  submit.html
safely_report/templates/enumerator/: index.html
safely_report/templates/survey/: index.html  layout.html  submit.html  submit_survey.html
search/: search_index.json
static/: styles.css
templates/: base.html  submit.html  survey.html
tests/: conftest.py  utils.py
tests/data/: example_enumerator_roster.csv  example_respondent_roster.csv  example_roster.csv  stats4sd_example_xlsform_adapted.xlsx  test_cases.xlsx
tests/integration/: conftest.py
tests/integration/garbler/: test_garble_and_store.py  test_optimistic_locking.py  test_parse_xlsform.py
tests/integration/survey_processor/: test_navigation.py
tests/integration/xlsform_reader/: test_validation.py
tests/unit/: test_formula_translation.py
tests/unit/garbler/: test_find_garbling.py  test_garble_response.py  test_garbling_params.py
tests/unit/survey_processor/: conftest.py  test_curr_lang.py  test_formula_translation.py  test_get_value.py  test_set_curr_value.py
(+1 files in other folders)
