[tool.poetry]
name = "safely-report"
version = "0.1.0"
description = "A survey web application that can provide plausible deniability to survey respondents"
authors = ["Sangyoon Park <datumvitae@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
pyxform = "^1.12.2"
python-dotenv = "^1.0.0"
flask-session = "^0.5.0"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.11.0"
mypy = "^1.7.0"
pytest-mock = "^3.12.0"
pytest-dotenv = "^0.5.2"

[tool.black]
line-length = 79
exclude = 'migrations'

[tool.isort]
profile = "black"
skip_gitignore = true
skip = ["migrations"]
line_length = 79

[tool.mypy]
exclude = ["migrations"]

[tool.pytest.ini_options]
env_files = [".env.test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
